# dify-official-plugins

./: .difyignore  .gitignore  openrouter.difypkg
models/gemini/: .difyignore  .gitignore  README.md  main.py  manifest.yaml  pyproject.toml  requirements.txt
models/gemini/models/: common_gemini.py
models/gemini/models/llm/: _position.yaml  gemini-1.5-flash-latest.yaml  gemini-1.5-flash.yaml  gemini-1.5-pro-latest.yaml  gemini-1.5-pro.yaml  gemini-2.0-flash-001.yaml  gemini-2.0-flash-exp.yaml  gemini-2.0-flash-lite.yaml  gemini-2.0-flash-preview-image-generation.yaml  gemini-2.0-flash-thinking-exp-01-21.yaml  gemini-2.0-flash-thinking-exp-1219.yaml  gemini-2.0-flash.yaml  gemini-2.0-pro-exp-02-05.yaml  gemini-2.0-pro-exp.yaml  gemini-2.5-flash-lite-preview-06-17.yaml  gemini-2.5-flash-lite.yaml  gemini-2.5-flash-preview-04-17.yaml  gemini-2.5-flash-preview-05-20.yaml  gemini-2.5-flash.yaml  gemini-2.5-pro-exp-03-25.yaml  gemini-2.5-pro-preview-03-25.yaml  gemini-2.5-pro.yaml  (+5 more)
models/gemini/provider/: google.py  google.yaml
tools/microsoft_todo/: GUIDE.md  PRIVACY.md  README.md  manifest.yaml  pyproject.toml  requirements.txt
tools/microsoft_todo/provider/: microsoft_todo.py  microsoft_todo.yaml
tools/microsoft_todo/src/: mstodo.py
tools/microsoft_todo/tools/: complete_task.py  complete_task.yaml  create_task.py  create_task.yaml  get_all_tasks.py  get_all_tasks.yaml  get_list_by_id.py  get_list_by_id.yaml  get_lists.py  get_lists.yaml  get_task_by_id.py  get_task_by_id.yaml  get_tasks.py  get_tasks.yaml  get_tasks_by_list_id.py  get_tasks_by_list_id.yaml
(+1367 files in other folders)
