[project]
name = "gemini-g9cIE8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# uv pip compile pyproject.toml -o ./requirements.txt
dependencies = [
    "dify-plugin>=0.4.3,<0.5.0",
    "google-genai>=1.27.0,<2.0.0",
    "google-generativeai>=0.8.5",
    "numpy>=2.3.2",
]

# uv run black . -C -l 100
# uv run ruff check --fix
[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.5",
]
